--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ footer .footer_sec {
 
 .wish-header {
     color: white;
-    height: 60vh;
+    height: 75vh;
     background-image: url(../Images/wish-header.jpg);
     background-size: cover;
     display: flex;
@@ -308,4 +308,25 @@ footer .footer_sec {
     align-items: center;
     font-size: 80px;
     font-weight: bolder;
+}
+
+.wish-table {
+    min-width: 400;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px 10px 0 0 !important;
+}
+
+.wish-table thead th {
+    color: var(--main-color);
+    background-color: var(--nav-color);
+}
+
+.wish-table .wish-img img {
+    width: 70px;
+    height: 90px;
+}
+
+.wish-table tbody tr {
+    border-bottom: 1px solid #f3f3f3;
 }
