--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,41 @@
-/* main stuff */
-
 :root {
     --main-color: #FE980F;
-    --nav-color: #08546C;
-    /* #DDA853 #beb20e FE980F */
+    --nav-color: #08546C
 }
 
 body {
     background-color: #dedede;
-    /* font-family: 'Oswald', sans-serif; */
-    font-family: 'Nunito', sans-serif;
+    font-family: Nunito, sans-serif
 }
 
 .btn-main {
     background-color: var(--nav-color);
     color: var(--main-color);
-    transition: all 0.4s;
+    transition: all .4s
 }
 
 .btn-main:hover {
-    color: wheat;
+    color: wheat
 }
 
 .bg-main {
-    color: var(--nav-color);
+    color: var(--nav-color)
 }
 
 .nav-main {
-    background-color: var(--nav-color) !important;
+    background-color: var(--nav-color)!important;
     position: fixed;
     visibility: hidden;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
-    /* padding: 10px 0px; */
-    background: #ffffff;
+    background: #fff;
     z-index: 0;
-    transition: all 500ms ease;
-    -moz-transition: all 500ms ease;
-    -webkit-transition: all 500ms ease;
-    -ms-transition: all 500ms ease;
-    -o-transition: all 500ms ease;
+    transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
     z-index: 999;
     opacity: 1;
     visibility: visible;
@@ -49,11 +44,11 @@ body {
     -op-animation-name: fadeInDown;
     -webkit-animation-name: fadeInDown;
     animation-name: fadeInDown;
-    -ms-animation-duration: 500ms;
-    -moz-animation-duration: 500ms;
-    -op-animation-duration: 500ms;
-    -webkit-animation-duration: 500ms;
-    animation-duration: 500ms;
+    -ms-animation-duration: .5s;
+    -moz-animation-duration: .5s;
+    -op-animation-duration: .5s;
+    -webkit-animation-duration: .5s;
+    animation-duration: .5s;
     -ms-animation-timing-function: linear;
     -moz-animation-timing-function: linear;
     -op-animation-timing-function: linear;
@@ -63,168 +58,141 @@ body {
     -moz-animation-iteration-count: 1;
     -op-animation-iteration-count: 1;
     -webkit-animation-iteration-count: 1;
-    animation-iteration-count: 1;
+    animation-iteration-count: 1
 }
 
 .brdr {
     width: 60px;
     height: 2px;
-    background-color: var(--main-color);
+    background-color: var(--main-color)
 }
 
-
-/* start of navbar section */
-
 #navbar {
-    /* background-color: var(--nav-color); */
-    background-color: transparent;
-    /* background-color: #f8f8f8; */
+    background-color: transparent
 }
 
 #navbar .navbar-brand {
     font-size: 22px;
+    color: var(--main-color)
 }
 
 #navbar a {
     color: var(--main-color);
-    transition: all 0.3s;
+    transition: all .3s
 }
 
 #navbar a:hover {
-    transform: scale(0.85);
+    transform: scale(.85)
 }
 
 #navbar .nav-item span {
-    font-size: 22px;
+    font-size: 22px
 }
 
 #navbar .link1 {
-    color: #f8f8f8;
+    color: #f8f8f8
 }
 
 #navbar .navbar-toggler {
-    color: var(--main-color);
+    color: var(--main-color)
 }
-
-
-/* start of home hero section */
 
 #header .homeInit {
     height: 100vh;
-    width: 100%;
+    width: 100%
+}
+
+#header .homeInit .btn {
+    font-size: 1.25em;
 }
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, .4);
     width: 100%;
     height: 100%;
-    color: white;
+    color: #fff
 }
 
 #header .slider1 {
     background-image: url(../Images/home-bg3.webp);
     background-size: cover;
-    background-position: center center;
+    background-position: center center
 }
 
 #header .slider2 {
     background-image: url(../Images/home-bg2.webp);
     background-size: cover;
-    background-position: center center;
+    background-position: center center
 }
 
 #header .slider3 {
     background-image: url(../Images/home-bg4.webp);
     background-size: cover;
-    background-position: center center;
+    background-position: center center
 }
 
 #header .overlay .h1 {
-    font-size: 64px;
+    font-size: 64px
 }
-
-
-/* ? random stuff */
 
 .hide-ele {
     transform: scale(0);
-    /* display: none; */
-    transition: all 0.5s ease-in-out;
-    margin: 0;
+    transition: all .5s ease-in-out;
+    margin: 0
 }
 
-
-/* products section */
-
 #products .products_list .brdr {
-    width: 50px;
+    width: 50px
 }
 
 #products .products_list .active {
     border-radius: 15px;
     background: var(--nav-color);
-    color: var(--main-color) !important;
-    /* background: #40403E;
-    border-bottom: 1px solid #FE980F; */
+    color: var(--main-color)!important
 }
 
 #products .products_list .nav-item span {
     color: var(--nav-color);
     cursor: pointer;
-    transition: all 0.4s;
+    transition: all .4s
 }
 
 #products .products_list .nav-item span:hover {
     border-radius: 15px;
-    color: var(--main-color);
+    color: var(--main-color)
 }
 
 #products .products_items .product_card {
-    transition: all 0.5s ease-in-out;
+    transition: all .5s ease-in-out
 }
 
 #products .product_card {
     background-color: #fff;
-    border-radius: 9px;
+    border-radius: 9px
 }
 
 #products .action_btns,
 #products .label {
-    height: 37px;
+    height: 37px
 }
 
 #products .action_btns i {
-    font-size: 1.25em;
+    font-size: 1.25em
 }
 
 #products .imgs {
-    height: 250px;
+    height: 250px
 }
 
 #products .imgs img {
     border-radius: 9px 9px 0 0;
     width: 100%;
-    height: 250px;
+    height: 250px
 }
 
 #products .section-heading a {
-    color: var(--main-color);
+    color: var(--main-color)
 }
-
-
-/* category section */
-
-
-/*
-*
-* ==========================================
-* CUSTOM UTIL CLASSES
-* ==========================================
-*
-*/
-
-
-/* Horizontal line */
 
 #accordionExample .collapsible-link::before {
     content: '';
@@ -235,11 +203,8 @@ body {
     top: calc(50% - 1px);
     right: 1rem;
     display: block;
-    transition: all 0.3s;
+    transition: all .3s
 }
-
-
-/* Vertical line */
 
 #accordionExample .collapsible-link::after {
     content: '';
@@ -250,36 +215,33 @@ body {
     top: calc(50% - 7px);
     right: calc(1rem + 6px);
     display: block;
-    transition: all 0.3s;
+    transition: all .3s
 }
 
-#accordionExample .collapsible-link[aria-expanded='true']::after {
-    transform: rotate(90deg) translateX(-1px);
+#accordionExample .collapsible-link[aria-expanded=true]::after {
+    transform: rotate(90deg) translateX(-1px)
 }
 
-#accordionExample .collapsible-link[aria-expanded='true']::before {
-    transform: rotate(180deg);
+#accordionExample .collapsible-link[aria-expanded=true]::before {
+    transform: rotate(180deg)
 }
 
 #accordionExample .card {
-    border-color: transparent;
+    border-color: transparent
 }
 
 #accordionExample .card .card-header a {
-    color: var(--main-color);
+    color: var(--main-color)
 }
 
-
-/* * Footer */
-
 footer .list-group-item {
-    border: 0 !important;
-    background-color: transparent !important;
+    border: 0!important;
+    background-color: transparent!important
 }
 
 footer .footer_main {
     background-color: #202020;
-    color: white;
+    color: #fff
 }
 
 footer .footer_main .icon {
@@ -288,9 +250,27 @@ footer .footer_main .icon {
     font-size: 1.25em;
     border-radius: 50%;
     border: 1px solid #f8f8f8;
+    transition: all .3s;
+    -moz-transition: all .3s
+}
+
+footer .footer_main .icon:hover {
+    background-color: var(--main-color);
+    cursor: pointer;
+    border-color: var(--main-color)
 }
 
 footer .footer_sec {
-    background-color: #2C2C2C;
-    color: white;
+    background-color: #2c2c2c;
+    color: #fff
+}
+
+footer .wraper h4::after {
+    content: '';
+    position: absolute;
+    width: 80px;
+    height: 2px;
+    background-color: var(--nav-color);
+    bottom: -4px;
+    left: 4px
 }
