--- a/css/style2.css
+++ b/css/style2.css
@@ -44,6 +44,23 @@
 
 /* * end of contact */
 
-.vh-50 {
-    height: 50vh;
+#post {
+    height: 60vh;
+    background-image: url(../Images/hello.jpg);
+    background-size: cover;
+    background-position: center center;
+}
+
+label {
+    color: rgb(255, 0, 0);
+    font-size: 16px;
+    font-weight: bold !important;
+}
+
+button {
+    background-color: rgb(219, 189, 17);
+    color: white;
+    width: 20%;
+    padding: 20px;
+    font-size: 16px !important;
 }
