--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,17 @@
 
 body {
     background-color: #dedede;
-    font-family: Nunito, sans-serif
+    font-family: Nunito, sans-serif;
 }
 
 .btn-main {
     background-color: var(--nav-color);
     color: var(--main-color);
-    transition: all .4s
+    transition: all .4s;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -ms-transition: all .4s;
+    -o-transition: all .4s;
 }
 
 .btn-main:hover {
@@ -68,7 +72,7 @@ body {
 }
 
 #navbar {
-    background-color: transparent
+    background-color: transparent;
 }
 
 #navbar .navbar-brand {
@@ -78,11 +82,19 @@ body {
 
 #navbar a {
     color: var(--main-color);
-    transition: all .3s
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
 }
 
 #navbar a:hover {
-    transform: scale(.85)
+    transform: scale(.85);
+    -webkit-transform: scale(.85);
+    -moz-transform: scale(.85);
+    -ms-transform: scale(.85);
+    -o-transform: scale(.85);
 }
 
 #navbar .nav-item span {
@@ -90,16 +102,16 @@ body {
 }
 
 #navbar .link1 {
-    color: #f8f8f8
+    color: #f8f8f8;
 }
 
 #navbar .navbar-toggler {
-    color: var(--main-color)
+    color: var(--main-color);
 }
 
 #header .homeInit {
     height: 100vh;
-    width: 100%
+    width: 100%;
 }
 
 #header .homeInit .btn {
@@ -116,13 +128,13 @@ body {
 #header .slider1 {
     background-image: url(../Images/home-bg3.webp);
     background-size: cover;
-    background-position: center center
+    background-position: center center;
 }
 
 #header .slider2 {
     background-image: url(../Images/home-bg2.webp);
     background-size: cover;
-    background-position: center center
+    background-position: center center;
 }
 
 #header .slider3 {
@@ -148,18 +160,22 @@ body {
 #products .products_list .active {
     border-radius: 15px;
     background: var(--nav-color);
-    color: var(--main-color)!important
+    color: var(--main-color)!important;
 }
 
 #products .products_list .nav-item span {
     color: var(--nav-color);
     cursor: pointer;
-    transition: all .4s
+    transition: all .4s;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -ms-transition: all .4s;
+    -o-transition: all .4s;
 }
 
 #products .products_list .nav-item span:hover {
     border-radius: 15px;
-    color: var(--main-color)
+    color: var(--main-color);
 }
 
 #products .products_items .product_card {
@@ -168,16 +184,20 @@ body {
 
 #products .product_card {
     background-color: #fff;
-    border-radius: 9px
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    -ms-border-radius: 9px;
+    -o-border-radius: 9px;
 }
 
 #products .action_btns,
 #products .label {
-    height: 37px
+    height: 37px;
 }
 
 #products .action_btns i {
-    font-size: 1.25em
+    font-size: 1.25em;
 }
 
 #products .imgs {
@@ -187,11 +207,11 @@ body {
 #products .imgs img {
     border-radius: 9px 9px 0 0;
     width: 100%;
-    height: 250px
+    height: 250px;
 }
 
 #products .section-heading a {
-    color: var(--main-color)
+    color: var(--main-color);
 }
 
 #accordionExample .collapsible-link::before {
@@ -203,7 +223,11 @@ body {
     top: calc(50% - 1px);
     right: 1rem;
     display: block;
-    transition: all .3s
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
 }
 
 #accordionExample .collapsible-link::after {
@@ -215,15 +239,27 @@ body {
     top: calc(50% - 7px);
     right: calc(1rem + 6px);
     display: block;
-    transition: all .3s
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
 }
 
 #accordionExample .collapsible-link[aria-expanded=true]::after {
-    transform: rotate(90deg) translateX(-1px)
+    transform: rotate(90deg) translateX(-1px);
+    -webkit-transform: rotate(90deg) translateX(-1px);
+    -moz-transform: rotate(90deg) translateX(-1px);
+    -ms-transform: rotate(90deg) translateX(-1px);
+    -o-transform: rotate(90deg) translateX(-1px);
 }
 
 #accordionExample .collapsible-link[aria-expanded=true]::before {
-    transform: rotate(180deg)
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
 }
 
 #accordionExample .card {
@@ -236,7 +272,7 @@ body {
 
 footer .list-group-item {
     border: 0!important;
-    background-color: transparent!important
+    background-color: transparent!important;
 }
 
 footer .footer_main {
